# flappy_bird_gazebo

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.xml  pull_request_template.md  requirements.txt
config/: sim_params.yaml
include/flappy_bird_gazebo/: CameraMoverPlugin.h  flappyBirdPlugin.h
launch/: flappy_bird.launch
meshes/: flappy_bird.dae
models/flappy_bg/: model.config  model.sdf
models/flappy_bg/materials/scripts/: flappy_bg.material
models/pipe/: model.config  model.sdf
models/pipe/meshes/: pipe.dae
scripts/: flyer.py
src/: CameraMoverPlugin.cpp  flappyBirdPlugin.cpp
urdf/: flappy_bird_gazebo.gazebo  flappy_bird_gazebo.xacro  macros.xacro  materials.xacro
worlds/: flappy_bird.world
